# JoyVoyage

./: gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/release/: output.json
app/src/androidTest/java/com/jlnwefw/tdqedstst/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/oiwehwe/: qbvqp3.html
app/src/main/assets/slotsvoya/: index.html
app/src/main/assets/slotsvoya/css/: app.css
app/src/main/assets/slotsvoya/js/: app.js
app/src/main/cpp/: httpsLos.cpp  httpsLos.h  loadMainConfig.cpp
app/src/main/java/dug/morn/night/prego/: AnyLoahhfr.kt  Msdkjhqcb.kt  Ooopwiec.kt  Yhqgwe3.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: startimage_round.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: remmddd.xml
app/src/test/java/com/jlnwefw/tdqedstst/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
